# holochain-infra

./: .envrc  .gitignore  .sops.yaml  Cargo.toml  README.md  flake.nix  macos-arm64-setup-notes.md  options.nix  shared-nix-settings.nix  shared.nix
.github/workflows/: pr.yml  turn-readiness-check.yml
applications/postbuildstepper/: Cargo.toml
applications/postbuildstepper/src/: main.rs
docs/: adding-a-turn-signal-bootstrap-combo-server.md  install-log-contabo-linux-vps.md  installing-linux-host.md  macos-setup-instructions.md
lib/: make-system-directory.nix  make-system-directory.sh
modules/: _template.nix  formatter.nix  magicPaths.nix  mkDarwinDeploy.nix  mkLinuxDeploy.nix  modules.nix  nixosModules.github-runner-multi-arch.nix  nixosModules.holo-users.nix  speicalArgs.nix  users.nix
modules/apps.deploy-/: darwin.nix  default.nix  linux.nix
modules/apps.ssh-/: default.nix
modules/darwinConfigurations.macos-01/: attrs.nix  configuration.nix  default.nix  home.nix  remote-builder.nix
modules/flake-parts/: _template.nix  formatter.nix  hardware.hetzner-cloud-ccx.nix  hardware.hetzner-cloud-cpx.nix  holochain-turn-server.nix  modules.nix  nixosConfigurations.tests.nix  nixosModules.holo-users.nix  nixosModules.nix-build-distributor.nix  packages.default.nix  (+7 more)
nomad/: commander.hcl  debug.hcl  inspector.hcl  poc-1.hcl  poc-2.hcl
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  README.md  go.mod  go.sum  main.go
secrets/: events-nix-cache.yml  static-age-keys.yaml
tf/: .terraform.lock.hcl  state.json  terraform.tfstate  terraform.tfstate.backup  tfgrid-dev.tf
(+157 files in other folders)
